--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "node": "^16.10.0",
-    "start": "node index.html"
+    "start": "node index.js"
   }
 }
