--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "express": "^4.17.1",
-    "node": "^16.10.0",
-    "start": "index.html"
+    "node": "^16.10.0"
   }
 }
