--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.17.1",
-    "node": "^16.10.0"
+    "node": "^16.10.0",
+    "start":"http://127.0.0.1:5500/index.html"
   }
 }
