--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "node": "^16.10.0",
-    "start":"http://127.0.0.1:5500/index.html"
+    "start":"http://localhost:5500/index.html"
   }
 }
