--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "main":"index.js",
+  "scripts":{
+    "start":"node index.js"
+  },
   "dependencies": {
     "express": "^4.17.1",
-    "node": "^16.10.0",
-    "start":"node index.js"
+    "node": "^16.10.0"
   }
 }
