--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "main":"index.js",
-  "scripts":{
-    "start":"node index.js"
+  "scripts": {
+    "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "node": "^16.10.0"
+    "json": "^11.0.0"
   }
 }
